# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2026, The OpenROAD Authors

load("//bazel:man_pages.bzl", "man_pages")

man_pages(
    name = "man_pages",
    docs_srcs = [
        "Makefile",
    ] + glob(["md/**/*.md"]),
    messages = [
        "//src/ant:messages_txt",
        "//src/cts:messages_txt",
        "//src/dbSta:messages_txt",
        "//src/dft:messages_txt",
        "//src/dpl:messages_txt",
        "//src/drt:messages_txt",
        "//src/dst:messages_txt",
        "//src/fin:messages_txt",
        "//src/gpl:messages_txt",
        "//src/grt:messages_txt",
        "//src/ifp:messages_txt",
        "//src/mpl:messages_txt",
        "//src/odb:messages_txt",
        "//src/pad:messages_txt",
        "//src/par:messages_txt",
        "//src/pdn:messages_txt",
        "//src/ppl:messages_txt",
        "//src/psm:messages_txt",
        "//src/rcx:messages_txt",
        "//src/rmp:messages_txt",
        "//src/rsz:messages_txt",
        "//src/stt:messages_txt",
        "//src/tap:messages_txt",
        "//src/upf:messages_txt",
        "//src/utl:messages_txt",
    ],
    readmes = [
        "//src/ant:README.md",
        "//src/cts:README.md",
        "//src/dft:README.md",
        "//src/dpl:README.md",
        "//src/drt:README.md",
        "//src/fin:README.md",
        "//src/gpl:README.md",
        "//src/grt:README.md",
        "//src/gui:README.md",
        "//src/ifp:README.md",
        "//src/mpl:README.md",
        "//src/odb:README.md",
        "//src/pad:README.md",
        "//src/par:README.md",
        "//src/pdn:README.md",
        "//src/ppl:README.md",
        "//src/psm:README.md",
        "//src/rcx:README.md",
        "//src/rmp:README.md",
        "//src/rsz:README.md",
        "//src/stt:README.md",
        "//src/tap:README.md",
        "//src/upf:README.md",
        "//src/utl:README.md",
    ],
    scripts = [
        "//docs/src/scripts:link_readmes.sh",
        "//docs/src/scripts:md_roff_compat.py",
        "//docs/src/scripts:manpage.py",
        "//docs/src/scripts:extract_utils.py",
    ],
    visibility = ["//visibility:public"],
)
